chore: update licenses to UNLICENSED and change author name

--- a/package.json
+++ b/package.json
@@ -36,6 +36,6 @@
     "type": "git",
     "url": "https://github.com/lordcraymen/ir-toolkit.git"
   },
-  "author": "lordcraymen",
-  "license": "MIT"
+  "author": "Florian \"lordcraymen\" Patzke",
+  "license": "UNLICENSED"
 }
