--- a/packages/ir-runtime-node/package.json
+++ b/packages/ir-runtime-node/package.json
@@ -37,5 +37,5 @@
   },
   "homepage": "https://github.com/lordcraymen/ir-toolkit#readme",
   "keywords": ["runtime", "node", "capabilities"],
-  "license": "MIT"
+  "license": "UNLICENSED"
 }
