--- a/packages/ir-target-typescript/package.json
+++ b/packages/ir-target-typescript/package.json
@@ -36,5 +36,5 @@
   },
   "homepage": "https://github.com/lordcraymen/ir-toolkit#readme",
   "keywords": ["target", "typescript", "code-generation"],
-  "license": "MIT"
+  "license": "UNLICENSED"
 }
