--- a/packages/ir-caps/package.json
+++ b/packages/ir-caps/package.json
@@ -33,5 +33,5 @@
   },
   "homepage": "https://github.com/lordcraymen/ir-toolkit#readme",
   "keywords": ["capabilities", "interfaces"],
-  "license": "MIT"
+  "license": "UNLICENSED"
 }
