--- a/packages/ir-compiler-core/package.json
+++ b/packages/ir-compiler-core/package.json
@@ -37,5 +37,5 @@
   },
   "homepage": "https://github.com/lordcraymen/ir-toolkit#readme",
   "keywords": ["compiler", "orchestration", "ir"],
-  "license": "MIT"
+  "license": "UNLICENSED"
 }
