--- a/packages/ir-core/package.json
+++ b/packages/ir-core/package.json
@@ -33,5 +33,5 @@
   },
   "homepage": "https://github.com/lordcraymen/ir-toolkit#readme",
   "keywords": ["ir", "compiler", "intermediate-representation"],
-  "license": "MIT"
+  "license": "UNLICENSED"
 }
