fix: build packages in dependency order

--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "ci:install": "npm ci",
     "lint": "eslint .",
     "test": "npm run -ws test",
-    "build": "npm run -ws build",
+    "build": "npm run build --workspaces --if-present",
     "typecheck": "tsc -p tsconfig.base.json --noEmit",
     "verify": "npm run ci:install && npm run lint && npm run test && npm run build",
     "smoke": "node tooling/smoke.mjs",
